added ua client project

--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -224,8 +224,8 @@ m4trace:configure.ac:14: -1- AC_SUBST([am__untar])
 m4trace:configure.ac:14: -1- AC_SUBST_TRACE([am__untar])
 m4trace:configure.ac:14: -1- m4_pattern_allow([^am__untar$])
 m4trace:configure.ac:18: -1- AC_CONFIG_FILES([third-party/Makefile])
-m4trace:configure.ac:20: -1- AC_CONFIG_SUBDIRS([libcom libopccore libopc opctestlinux libtestopcserver ua/libuamappings])
-m4trace:configure.ac:20: -1- AC_SUBST([subdirs], ["$subdirs m4_normalize([libcom libopccore libopc opctestlinux libtestopcserver ua/libuamappings])"])
+m4trace:configure.ac:20: -1- AC_CONFIG_SUBDIRS([libcom libopccore libopc opctestlinux libtestopcserver ua/libuamappings ua/uaclient])
+m4trace:configure.ac:20: -1- AC_SUBST([subdirs], ["$subdirs m4_normalize([libcom libopccore libopc opctestlinux libtestopcserver ua/libuamappings ua/uaclient])"])
 m4trace:configure.ac:20: -1- AC_SUBST_TRACE([subdirs])
 m4trace:configure.ac:20: -1- m4_pattern_allow([^subdirs$])
 m4trace:configure.ac:22: -1- AC_CONFIG_FILES([Makefile])
