--- a/autom4te.cache/output.1
+++ b/autom4te.cache/output.1
@@ -634,7 +634,7 @@ enable_option_checking
       ac_precious_vars='build_alias
 host_alias
 target_alias'
-ac_subdirs_all='libcom libopccore libopc opctestlinux libtestopcserver ua/libuamappings'
+ac_subdirs_all='libcom libopccore libopc opctestlinux libtestopcserver ua/libuamappings ua/uaclient'
 
 # Initialize some variables set by options.
 ac_init_help=
@@ -2179,7 +2179,7 @@ ac_config_files="$ac_config_files third-party/Makefile"
 
 
 
-subdirs="$subdirs libcom libopccore libopc opctestlinux libtestopcserver ua/libuamappings"
+subdirs="$subdirs libcom libopccore libopc opctestlinux libtestopcserver ua/libuamappings ua/uaclient"
 
 
 ac_config_files="$ac_config_files Makefile"
