--- a/autom4te.cache/output.1
+++ b/autom4te.cache/output.1
@@ -634,7 +634,14 @@ enable_option_checking
       ac_precious_vars='build_alias
 host_alias
 target_alias'
-ac_subdirs_all='libcom libopccore libopc opctestlinux libtestopcserver ua/libuamappings ua/uaclient'
+ac_subdirs_all='
+ libcom 
+ libopccore 
+ libopc 
+ opctestlinux 
+ libtestopcserver 
+ ua/libuamappings 
+ ua/uaclient'
 
 # Initialize some variables set by options.
 ac_init_help=
