--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -224,25 +224,39 @@ m4trace:configure.ac:14: -1- AC_SUBST([am__untar])
 m4trace:configure.ac:14: -1- AC_SUBST_TRACE([am__untar])
 m4trace:configure.ac:14: -1- m4_pattern_allow([^am__untar$])
 m4trace:configure.ac:18: -1- AC_CONFIG_FILES([third-party/Makefile])
-m4trace:configure.ac:20: -1- AC_CONFIG_SUBDIRS([libcom libopccore libopc opctestlinux libtestopcserver ua/libuamappings ua/uaclient])
-m4trace:configure.ac:20: -1- AC_SUBST([subdirs], ["$subdirs m4_normalize([libcom libopccore libopc opctestlinux libtestopcserver ua/libuamappings ua/uaclient])"])
+m4trace:configure.ac:20: -1- AC_CONFIG_SUBDIRS([
+ libcom 
+ libopccore 
+ libopc 
+ opctestlinux 
+ libtestopcserver 
+ ua/libuamappings 
+ ua/uaclient])
+m4trace:configure.ac:20: -1- AC_SUBST([subdirs], ["$subdirs m4_normalize([
+ libcom 
+ libopccore 
+ libopc 
+ opctestlinux 
+ libtestopcserver 
+ ua/libuamappings 
+ ua/uaclient])"])
 m4trace:configure.ac:20: -1- AC_SUBST_TRACE([subdirs])
 m4trace:configure.ac:20: -1- m4_pattern_allow([^subdirs$])
-m4trace:configure.ac:22: -1- AC_CONFIG_FILES([Makefile])
-m4trace:configure.ac:24: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:24: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:24: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:24: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:29: -1- AC_CONFIG_FILES([Makefile])
+m4trace:configure.ac:31: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:31: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:31: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:31: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:31: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:31: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:31: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:31: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:31: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:31: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:31: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:31: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:31: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:31: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:31: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:31: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:31: -1- AC_SUBST_TRACE([MKDIR_P])
