implemented write operation in opcua command line tool

--- a/ua/uaclient/autom4te.cache/output.1
+++ b/ua/uaclient/autom4te.cache/output.1
@@ -572,7 +572,7 @@ PACKAGE_STRING=
 PACKAGE_BUGREPORT=
 PACKAGE_URL=
 
-ac_unique_file="src/main.cpp"
+ac_unique_file="src/opcua_main.cpp"
 # Factoring default headers for most tests.
 ac_includes_default="\
 #include <stdio.h>
