build fix. Fixed tests in opcua to avoid segmentation fault

--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -231,7 +231,7 @@ m4trace:configure.ac:20: -1- AC_CONFIG_SUBDIRS([
  opctestlinux 
  libtestopcserver 
  ua/libuamappings 
- ua/uaclient])
+ ua/server])
 m4trace:configure.ac:20: -1- AC_SUBST([subdirs], ["$subdirs m4_normalize([
  libcom 
  libopccore 
@@ -239,7 +239,7 @@ m4trace:configure.ac:20: -1- AC_SUBST([subdirs], ["$subdirs m4_normalize([
  opctestlinux 
  libtestopcserver 
  ua/libuamappings 
- ua/uaclient])"])
+ ua/server])"])
 m4trace:configure.ac:20: -1- AC_SUBST_TRACE([subdirs])
 m4trace:configure.ac:20: -1- m4_pattern_allow([^subdirs$])
 m4trace:configure.ac:29: -1- AC_CONFIG_FILES([Makefile])
