--- a/ua/server/autom4te.cache/traces.1
+++ b/ua/server/autom4te.cache/traces.1
@@ -147,7 +147,7 @@ m4trace:configure.ac:9: -1- AC_SUBST([target_alias])
 m4trace:configure.ac:9: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:9: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.ac:10: -1- AC_CONFIG_AUX_DIR([.])
-m4trace:configure.ac:12: -1- AM_INIT_AUTOMAKE([libuaclient], [0.1.0], [rykovanov.as@gmail.com])
+m4trace:configure.ac:12: -1- AM_INIT_AUTOMAKE([opcua], [0.1.0], [rykovanov.as@gmail.com])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
 m4trace:configure.ac:12: -1- AM_AUTOMAKE_VERSION([1.11.3])
 m4trace:configure.ac:12: -1- AC_REQUIRE_AUX_FILE([install-sh])
@@ -167,7 +167,7 @@ m4trace:configure.ac:12: -1- _AM_SUBST_NOTMAKE([am__isrc])
 m4trace:configure.ac:12: -1- AC_SUBST([CYGPATH_W])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([CYGPATH_W])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^CYGPATH_W$])
-m4trace:configure.ac:12: -1- AC_SUBST([PACKAGE], [libuaclient])
+m4trace:configure.ac:12: -1- AC_SUBST([PACKAGE], [opcua])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([PACKAGE])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^PACKAGE$])
 m4trace:configure.ac:12: -1- AC_SUBST([VERSION], [0.1.0])
@@ -546,47 +546,47 @@ m4trace:configure.ac:57: -1- m4_pattern_allow([^UA_MAPPING_LIBS$])
 m4trace:configure.ac:57: -1- AC_SUBST([UA_MAPPING_INCLUDES], [-I$with_ua_mappings/include])
 m4trace:configure.ac:57: -1- AC_SUBST_TRACE([UA_MAPPING_INCLUDES])
 m4trace:configure.ac:57: -1- m4_pattern_allow([^UA_MAPPING_INCLUDES$])
-m4trace:configure.ac:83: -1- AC_SUBST([TEST_SERVER_URI], [$with_testserver_uri])
-m4trace:configure.ac:83: -1- AC_SUBST_TRACE([TEST_SERVER_URI])
-m4trace:configure.ac:83: -1- m4_pattern_allow([^TEST_SERVER_URI$])
-m4trace:configure.ac:93: -1- AM_CONDITIONAL([BUILD_UA_CMD], [test x$enable_ua_cmd = xyes])
-m4trace:configure.ac:93: -1- AC_SUBST([BUILD_UA_CMD_TRUE])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([BUILD_UA_CMD_TRUE])
-m4trace:configure.ac:93: -1- m4_pattern_allow([^BUILD_UA_CMD_TRUE$])
-m4trace:configure.ac:93: -1- AC_SUBST([BUILD_UA_CMD_FALSE])
-m4trace:configure.ac:93: -1- AC_SUBST_TRACE([BUILD_UA_CMD_FALSE])
-m4trace:configure.ac:93: -1- m4_pattern_allow([^BUILD_UA_CMD_FALSE$])
-m4trace:configure.ac:93: -1- _AM_SUBST_NOTMAKE([BUILD_UA_CMD_TRUE])
-m4trace:configure.ac:93: -1- _AM_SUBST_NOTMAKE([BUILD_UA_CMD_FALSE])
-m4trace:configure.ac:97: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
+m4trace:configure.ac:83: -1- AM_CONDITIONAL([BUILD_UA_CMD], [test x$enable_ua_cmd = xyes])
+m4trace:configure.ac:83: -1- AC_SUBST([BUILD_UA_CMD_TRUE])
+m4trace:configure.ac:83: -1- AC_SUBST_TRACE([BUILD_UA_CMD_TRUE])
+m4trace:configure.ac:83: -1- m4_pattern_allow([^BUILD_UA_CMD_TRUE$])
+m4trace:configure.ac:83: -1- AC_SUBST([BUILD_UA_CMD_FALSE])
+m4trace:configure.ac:83: -1- AC_SUBST_TRACE([BUILD_UA_CMD_FALSE])
+m4trace:configure.ac:83: -1- m4_pattern_allow([^BUILD_UA_CMD_FALSE$])
+m4trace:configure.ac:83: -1- _AM_SUBST_NOTMAKE([BUILD_UA_CMD_TRUE])
+m4trace:configure.ac:83: -1- _AM_SUBST_NOTMAKE([BUILD_UA_CMD_FALSE])
+m4trace:configure.ac:85: -1- AC_SUBST([TEST_SERVER_URI], [$with_testserver_uri])
+m4trace:configure.ac:85: -1- AC_SUBST_TRACE([TEST_SERVER_URI])
+m4trace:configure.ac:85: -1- m4_pattern_allow([^TEST_SERVER_URI$])
+m4trace:configure.ac:98: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
 @%:@undef HAVE_UNISTD_H])
-m4trace:configure.ac:97: -1- AC_DEFINE_TRACE_LITERAL([HAVE_UNISTD_H])
-m4trace:configure.ac:97: -1- m4_pattern_allow([^HAVE_UNISTD_H$])
-m4trace:configure.ac:100: -1- AC_CONFIG_FILES([Makefile])
-m4trace:configure.ac:102: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:102: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:102: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:102: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:102: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:102: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:102: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:102: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:102: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:102: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:102: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:102: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:102: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:102: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:102: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:102: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:102: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:102: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:102: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:102: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:102: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:102: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:102: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:102: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:102: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:102: -1- AC_SUBST_TRACE([MKDIR_P])
-m4trace:configure.ac:102: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
+m4trace:configure.ac:98: -1- AC_DEFINE_TRACE_LITERAL([HAVE_UNISTD_H])
+m4trace:configure.ac:98: -1- m4_pattern_allow([^HAVE_UNISTD_H$])
+m4trace:configure.ac:101: -1- AC_CONFIG_FILES([Makefile])
+m4trace:configure.ac:103: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:103: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:103: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:103: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:103: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:103: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:103: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:103: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:103: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:103: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:103: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:103: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:103: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
