--- a/autom4te.cache/output.1
+++ b/autom4te.cache/output.1
@@ -635,8 +635,8 @@ enable_option_checking
 host_alias
 target_alias'
 ac_subdirs_all='
- third-party/gmock
  third-party/gtest
+ third-party/gmock
  third-party/uripp
  libopccore 
  ua/libuamappings 
@@ -2189,7 +2189,7 @@ am__tar='$${TAR-tar} chof - "$$tardir"' am__untar='$${TAR-tar} xf -'
 
 
 
-subdirs="$subdirs third-party/gmock third-party/gtest third-party/uripp libopccore ua/libuamappings ua/server"
+subdirs="$subdirs third-party/gtest third-party/gmock third-party/uripp libopccore ua/libuamappings ua/server"
 
 
 ac_config_files="$ac_config_files Makefile"
