updated dist target

--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -224,36 +224,32 @@ m4trace:configure.ac:14: -1- AC_SUBST([am__untar])
 m4trace:configure.ac:14: -1- AC_SUBST_TRACE([am__untar])
 m4trace:configure.ac:14: -1- m4_pattern_allow([^am__untar$])
 m4trace:configure.ac:25: -1- AC_CONFIG_SUBDIRS([
- third-party/gtest
- third-party/gmock
  third-party/uripp
- libopccore 
- ua/libuamappings 
+ libopccore
+ ua/libuamappings
  ua/server])
 m4trace:configure.ac:25: -1- AC_SUBST([subdirs], ["$subdirs m4_normalize([
- third-party/gtest
- third-party/gmock
  third-party/uripp
- libopccore 
- ua/libuamappings 
+ libopccore
+ ua/libuamappings
  ua/server])"])
 m4trace:configure.ac:25: -1- AC_SUBST_TRACE([subdirs])
 m4trace:configure.ac:25: -1- m4_pattern_allow([^subdirs$])
-m4trace:configure.ac:33: -1- AC_CONFIG_FILES([Makefile])
-m4trace:configure.ac:35: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:35: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:35: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:35: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:35: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:31: -1- AC_CONFIG_FILES([third-party/Makefile Makefile])
+m4trace:configure.ac:33: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:33: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:33: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:33: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:33: -1- AC_SUBST_TRACE([MKDIR_P])
