--- a/tests/gmock/gtest/autom4te.cache/traces.1
+++ b/tests/gmock/gtest/autom4te.cache/traces.1
@@ -1,8 +1,8 @@
-m4trace:aclocal.m4:1385: -1- m4_include([m4/libtool.m4])
-m4trace:aclocal.m4:1386: -1- m4_include([m4/ltoptions.m4])
-m4trace:aclocal.m4:1387: -1- m4_include([m4/ltsugar.m4])
-m4trace:aclocal.m4:1388: -1- m4_include([m4/ltversion.m4])
-m4trace:aclocal.m4:1389: -1- m4_include([m4/lt~obsolete.m4])
+m4trace:aclocal.m4:1194: -1- m4_include([m4/libtool.m4])
+m4trace:aclocal.m4:1195: -1- m4_include([m4/ltoptions.m4])
+m4trace:aclocal.m4:1196: -1- m4_include([m4/ltsugar.m4])
+m4trace:aclocal.m4:1197: -1- m4_include([m4/ltversion.m4])
+m4trace:aclocal.m4:1198: -1- m4_include([m4/lt~obsolete.m4])
 m4trace:configure.ac:1: -1- m4_include([m4/acx_pthread.m4])
 m4trace:configure.ac:7: -1- AC_INIT([Google C++ Testing Framework], [1.7.0], [googletestframework@googlegroups.com], [gtest])
 m4trace:configure.ac:7: -1- m4_pattern_forbid([^_?A[CHUM]_])
@@ -158,7 +158,7 @@ m4trace:configure.ac:18: -1- AC_CONFIG_FILES([Makefile])
 m4trace:configure.ac:19: -1- AC_CONFIG_FILES([scripts/gtest-config], [chmod +x scripts/gtest-config])
 m4trace:configure.ac:24: -1- AM_INIT_AUTOMAKE([1.9 dist-bzip2 dist-zip foreign subdir-objects])
 m4trace:configure.ac:24: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:24: -1- AM_AUTOMAKE_VERSION([1.14.1])
+m4trace:configure.ac:24: -1- AM_AUTOMAKE_VERSION([1.11.6])
 m4trace:configure.ac:24: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:24: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:24: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -215,11 +215,12 @@ m4trace:configure.ac:24: -1- m4_pattern_allow([^STRIP$])
 m4trace:configure.ac:24: -1- AC_SUBST([INSTALL_STRIP_PROGRAM])
 m4trace:configure.ac:24: -1- AC_SUBST_TRACE([INSTALL_STRIP_PROGRAM])
 m4trace:configure.ac:24: -1- m4_pattern_allow([^INSTALL_STRIP_PROGRAM$])
+m4trace:configure.ac:24: -1- AM_PROG_MKDIR_P
 m4trace:configure.ac:24: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:24: -1- AC_SUBST([MKDIR_P])
 m4trace:configure.ac:24: -1- AC_SUBST_TRACE([MKDIR_P])
 m4trace:configure.ac:24: -1- m4_pattern_allow([^MKDIR_P$])
-m4trace:configure.ac:24: -1- AC_SUBST([mkdir_p], ['$(MKDIR_P)'])
+m4trace:configure.ac:24: -1- AC_SUBST([mkdir_p], ["$MKDIR_P"])
 m4trace:configure.ac:24: -1- AC_SUBST_TRACE([mkdir_p])
 m4trace:configure.ac:24: -1- m4_pattern_allow([^mkdir_p$])
 m4trace:configure.ac:24: -1- AC_SUBST([AWK])
@@ -240,22 +241,6 @@ m4trace:configure.ac:24: -1- m4_pattern_allow([^am__tar$])
 m4trace:configure.ac:24: -1- AC_SUBST([am__untar])
 m4trace:configure.ac:24: -1- AC_SUBST_TRACE([am__untar])
 m4trace:configure.ac:24: -1- m4_pattern_allow([^am__untar$])
-m4trace:configure.ac:24: -1- AM_SILENT_RULES
-m4trace:configure.ac:24: -1- AC_SUBST([AM_V])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([AM_V])
-m4trace:configure.ac:24: -1- m4_pattern_allow([^AM_V$])
-m4trace:configure.ac:24: -1- _AM_SUBST_NOTMAKE([AM_V])
-m4trace:configure.ac:24: -1- AC_SUBST([AM_DEFAULT_V])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([AM_DEFAULT_V])
-m4trace:configure.ac:24: -1- m4_pattern_allow([^AM_DEFAULT_V$])
-m4trace:configure.ac:24: -1- _AM_SUBST_NOTMAKE([AM_DEFAULT_V])
-m4trace:configure.ac:24: -1- AC_SUBST([AM_DEFAULT_VERBOSITY])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([AM_DEFAULT_VERBOSITY])
-m4trace:configure.ac:24: -1- m4_pattern_allow([^AM_DEFAULT_VERBOSITY$])
-m4trace:configure.ac:24: -1- AC_SUBST([AM_BACKSLASH])
-m4trace:configure.ac:24: -1- AC_SUBST_TRACE([AM_BACKSLASH])
-m4trace:configure.ac:24: -1- m4_pattern_allow([^AM_BACKSLASH$])
-m4trace:configure.ac:24: -1- _AM_SUBST_NOTMAKE([AM_BACKSLASH])
 m4trace:configure.ac:27: -1- AC_SUBST([CC])
 m4trace:configure.ac:27: -1- AC_SUBST_TRACE([CC])
 m4trace:configure.ac:27: -1- m4_pattern_allow([^CC$])
@@ -292,7 +277,6 @@ m4trace:configure.ac:27: -1- m4_pattern_allow([^EXEEXT$])
 m4trace:configure.ac:27: -1- AC_SUBST([OBJEXT], [$ac_cv_objext])
 m4trace:configure.ac:27: -1- AC_SUBST_TRACE([OBJEXT])
 m4trace:configure.ac:27: -1- m4_pattern_allow([^OBJEXT$])
-m4trace:configure.ac:27: -1- AC_REQUIRE_AUX_FILE([compile])
 m4trace:configure.ac:27: -1- AC_SUBST([DEPDIR], ["${am__leading_dot}deps"])
 m4trace:configure.ac:27: -1- AC_SUBST_TRACE([DEPDIR])
 m4trace:configure.ac:27: -1- m4_pattern_allow([^DEPDIR$])
