--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,4 @@
-Rykovanov Alexander (rykovanov.as@gmail.com)
+Alexander Rykovanov (rykovanov.as@gmail.com)
+Olivier Roulet-Dubonnet (olivier.roulet@gmail.com) 
+Matthieu Bec (mdcb808@gmail.com)
+
